# QE-bands-processor

./: .gitignore  README.md  pyproject.toml
QE-bands-processor/: bands_data.py  get_gamma_gap.py
QE_bands_processor/: band_plot.py  bands_data.py
tests/: SMBA2PbI4_151_157.generate_bands.out  SMBA2PbI4_151_157.scf.out  SMBA2PbI4_151_157_band_structure.dat.gnu  test_band_plot.py
